Consecuentemente, desaparecen las clases VirusPool y MaskPool (además de que en
el futuro no tendremos que crear todavía más fondos en el package pooling solo para
este propósito), desaparecen los atributos correspondientes en la clase LaPandemia,
etc.

También se corrige como consecuencia natural un error de pérdida de memoria (memory
leak) en GameScreen#dispose, donde solo se liberaban los VirusActor pero no los
MaskActor. Tan solo es un ejemplo más de por qué haber reducido la duplicación de
código es importante.


Cambios presentados el 2021/01/29
---------------------------------
Tras observar más detenidamente el ciclo de vida de los fondos, se ha eliminado por
completo el package "pooling" a favor de crear fondos anónimos desde la clase principal
del juego. Además, la función init() se ha eliminado de donde era innecesaria, ya que
complicaba las cosas más de lo que ayudaba debido a las limitaciones del sistema
tipado de Java.

Se mueve ActorGenerator fuera de GameScreen y se establece una estructura ligeramente
distinta de packages más apropiada a cómo ha ido evolucionando el proyecto. Ahora, los
actores se encuentran en el package "actors"; los GestureListeners, en "gestures"; y
"level" pasa a llamarse "levels" por seguir la convención de utilizar el plural.


Cambios presentados el 2021/01/30
---------------------------------
Se remplaza el modo en el que se trabaja con las colisiones entre personajes por una
solución más orientada a eventos. Los actores notifican del movimiento que desean
realizar a un objeto conocido como CollisionDispatcher, que determina hasta dónde
pueden moverse, realiza el desplazamiento y notifica a los actores con los que se
haya producido una colisión del hecho mediante eventos. Con este cambio se pretende
tanto dejar de utilizar el objeto CollisionInfo (lo que ya se ha logrado) como
simplificar la manera en la que se describen las interacciones entre actores (lo
que considero que también se ha logrado con esto).