@@ -7,10 +7,12 @@ import com.colegiovivas.lapandemia.actors.generator.ActorGenerator;
 public abstract class GenerableActor extends CollisionableActor implements Pool.Poolable {
     private ActorGenerator generator;
 
-    public GenerableActor init(ActorGenerator generator, float x, float y) {
-        this.generator = generator;
-        setPosition(x, y);
+    public GenerableActor init() {
         return this;
+    }
+
+    public void setGenerator(ActorGenerator generator) {
+        this.generator = generator;
     }
 
     @Override
